--- a/modules/templates/menu.html
+++ b/modules/templates/menu.html
@@ -47,7 +47,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit nisi nulla inventore quia, quasi animi amet esse maiores rerum architecto magni illo delectus reprehenderit quod laborum sapiente fuga minus.
           </div>
           <div class="col-12 col-sm-3 offset-sm-3 align-self-center">
-            <a class="btn btn-info btn-lg" href="./origin_destination_analysis" role="button">Browse</a>          
+            <a class="btn btn-info btn-lg" href="./app1" role="button">Browse</a>          
           </div>
         </div>
     </div>
@@ -62,22 +62,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit nisi nulla inventore quia, quasi animi amet esse maiores rerum architecto magni illo delectus reprehenderit quod laborum sapiente fuga minus.
           </div>
           <div class="col-12 col-sm-3 offset-sm-3 order-sm-first align-self-center">
-            <a class="btn btn-info btn-lg" href="#" role="button">Browse</a>          
-          </div>
-        </div>
-    </div>
-
-    <div class="container-fluid menu-content">
-        <div class="row row-header">
-          <div class="col-12 offset-1"><h1 class="text-white">What is FlightDetector?</h1></div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-sm-3 offset-sm-1 text-white">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime harum illo odio asperiores labore, obcaecati fuga earum dolorum debitis laudantium at tempora aliquam praesentium delectus repellat aspernatur quam unde porro!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit nisi nulla inventore quia, quasi animi amet esse maiores rerum architecto magni illo delectus reprehenderit quod laborum sapiente fuga minus.
-          </div>
-          <div class="col-12 col-sm-3 offset-sm-3 align-self-center">
-            <a class="btn btn-info btn-lg" href="#" role="button">Browse</a>          
+            <a class="btn btn-info btn-lg" href="./app2" role="button">Browse</a>          
           </div>
         </div>
     </div>
