text fixes/images of apps/requirements fixes

--- a/modules/templates/about.html
+++ b/modules/templates/about.html
@@ -38,12 +38,16 @@
 
     <div class="container-fluid menu-content">
         <div class="row row-header">
-          <div class="col-12 col-md-4 offset-md-4"><h1 class="text-white">What is FlightDetector?</h1></div>
+          <div class="col-12 col-md-4 offset-md-4"><h1 class="text-white">About the project</h1></div>
         </div>
         <div class="row">
           <div class="col-12 col-md-4 offset-md-4 text-white">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime harum illo odio asperiores labore, obcaecati fuga earum dolorum debitis laudantium at tempora aliquam praesentium delectus repellat aspernatur quam unde porro!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit nisi nulla inventore quia, quasi animi amet esse maiores rerum architecto magni illo delectus reprehenderit quod laborum sapiente fuga minus.
+            This website is created as a university cycle of home tasks. In order to perform this job I used a variety of
+            python libraries and engaged my knowledge of object-oriented programming, knowledge of working with API and designing abstract data types. As well, I needed to explore
+            the power of Dash framework and its capabilities to create interactive apps using Reach js framework under its hood. Except theses points, the simple designing of
+            the wrapper site was done in responsive and adaptive way using Bootstrap Web UI Framework, that means the site will have an appropriate layout
+            both in large and small devices. I am a sole contributor to this project. It can be explored in a great detail
+            if you visit by github repository <a class='git' href='https://github.com/psemchyshyn/dz_project'>Here</a> 
           </div>
         </div>
           <div class="row btn-about">
