--- a/modules/templates/home.html
+++ b/modules/templates/home.html
@@ -38,12 +38,12 @@
 
     <div class="container-fluid home-img">
         <div class="row row-header">
-          <div class="col-12 offset-1"><h1 class="text-white">What is FlightDetector?</h1></div>
+          <div class="col-12 offset-1"><h1 class="text-white">What is FlightsDetecor?</h1></div>
         </div>
         <div class="row">
           <div class="col-12 col-sm-3 offset-sm-1 text-white">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime harum illo odio asperiores labore, obcaecati fuga earum dolorum debitis laudantium at tempora aliquam praesentium delectus repellat aspernatur quam unde porro!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit nisi nulla inventore quia, quasi animi amet esse maiores rerum architecto magni illo delectus reprehenderit quod laborum sapiente fuga minus.
+            Flight Detector is created for managing flights of different directions and finding the most beneficial in terms of money and time saving ones.
+            The results are presented in user-friendly web-applications(one of them performs alternative flights analysis and the other one - route analysis), which allow to get flights and present them in a shape of graphs and web-maps by indicating the required parameters.
           </div>
           <div class="col-12 col-sm-3 offset-sm-3 align-self-center">
             <a class="btn btn-info btn-lg" href="./menu" role="button">Explore</a>          
