--- a/modules/templates/menu.html
+++ b/modules/templates/menu.html
@@ -39,30 +39,35 @@
 
     <div class="container-fluid menu-content">
         <div class="row row-header">
-          <div class="col-12 offset-1"><h1 class="text-white">What is FlightDetector?</h1></div>
+          <div class="col-12 offset-1"><h1 class="text-white">Route analysis</h1></div>
         </div>
         <div class="row">
           <div class="col-12 col-sm-3 offset-sm-1 text-white">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime harum illo odio asperiores labore, obcaecati fuga earum dolorum debitis laudantium at tempora aliquam praesentium delectus repellat aspernatur quam unde porro!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit nisi nulla inventore quia, quasi animi amet esse maiores rerum architecto magni illo delectus reprehenderit quod laborum sapiente fuga minus.
+            This is route analysis app. By opening this app you will be able:<br>
+            to see the web-map portraying your route;<br>
+            to explore the table(sorted by price), which will present data about tickets; <br>          
+            to see the graph visualizing how the prices fluctuate depending on filter type; <br>
+            to choose the desired price range, by moving the slider of prices; <br>
           </div>
           <div class="col-12 col-sm-3 offset-sm-3 align-self-center">
-            <a class="btn btn-info btn-lg" href="./app1" role="button">Browse</a>          
+            <a class="btn btn-info btn-lg" href="./app1" role="button">Open</a>          
           </div>
         </div>
     </div>
 
     <div class="container-fluid menu-content">
         <div class="row row-header">
-          <div class="col-12 offset-1"><h1 class="text-white">What is FlightDetector?</h1></div>
+          <div class="col-12 offset-1"><h1 class="text-white">Alternative flights analysis</h1></div>
         </div>
         <div class="row">
           <div class="col-12 col-sm-3 offset-sm-1 order-sm-last text-white">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime harum illo odio asperiores labore, obcaecati fuga earum dolorum debitis laudantium at tempora aliquam praesentium delectus repellat aspernatur quam unde porro!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit nisi nulla inventore quia, quasi animi amet esse maiores rerum architecto magni illo delectus reprehenderit quod laborum sapiente fuga minus.
+           This is alternative flights analysis app. By opening this app you will be able:
+            to see the web-map proposing all alternative directions to the entered destination city; <br>
+            to get those alternative flights on the bubbled graph(the OY axis will show the distance from origin city to alternative city) and each bubble represents an alternative flight; <br>
+            by hovering on the wanted bubble toget another graph, which presents additional information about that flight tickets prices; <br>
           </div>
           <div class="col-12 col-sm-3 offset-sm-3 order-sm-first align-self-center">
-            <a class="btn btn-info btn-lg" href="./app2" role="button">Browse</a>          
+            <a class="btn btn-info btn-lg" href="./app2" role="button">Open</a>          
           </div>
         </div>
     </div>
