--- a/modules/static/css/styles.css
+++ b/modules/static/css/styles.css
@@ -30,3 +30,12 @@
     margin-top: 50px;
     padding-bottom: 50px;
 }
+
+.git{
+  text-decoration: none;
+  color: black;
+}
+
+.git:hover{
+  color:white;
+}
